2007-12-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkText.c (DeleteChars, TextEditCmd, updateDirtyFlag): 
	* tests/text.test (text-25.10.1,25.11.[12]): 
	Don't require [update idle] to trigger Modified event [Bug 1809538]
	Modified virtual event should only fire on state change [Bug 1799782]
	Make sure we delete chars before triggering <<Modified>> [Bug 1737288]

2007-12-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinInt.h: remove CS_CLASSDC (not recommended for any apps now)
	* win/tkWinX.c:   and simplify WNDCLASS to one style.
	* win/tkWinWm.c:  Reduce wrapper update for exStyle to toolwindow
	change only and set WS_EX_LAYERED as sticky (once set on a window,
	do not remove it) to reduce alpha transition flicker.

	* win/tkWinDraw.c: Applied [Patch 1723362] for transparent bitmaps.

2007-11-26  Kevin Kenny  <kennykb@acm.org>
	
	Backport from HEAD of [Bug #1822391]:
	
	* generic/tkImgPPM.c (StringReadPPM): Corrected a comparison
	whose sense was reversed that resulted in reading beyond the
	end of the input buffer on malformed PPM data. [Bug #1822391]
	* tests/imgPPM.test (imgPPM-4.1): Added test case that
	exercises [Bug #1822391].
	
2007-11-09  Daniel Steffen  <das@users.sourceforge.net>

	Backport from HEAD of Aqua changes from 2007-10-12 to 2007-11-09:

	* macosx/tkMacOSXCarbonEvents.c
	(InstallStandardApplicationEventHandler): on Mac OS X Leopard, replace
	the 2005-11-27 approach of installing the standard application handler
	by calling RAEL and immediately longjmping out of it from an event
	handler, as that now leads to crashes in -[NSView unlockFocus] whenever
	HIToolbox uses Cocoa in Leopard (Help menu, Nav Services, Color
	Picker). Instead call InstallStandardEventHandler() on the application
	and menubar event targets, as Leopard ISEH finally handles these
	correctly. Unfortunately need a HIToolbox-internal SPI to retrieve the
	menubar event target, no public API appears have that functionality.
